--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "author": "Johannes Troeger <johannes.troeger@gmail.com>",
   "license": "WTFPL",
+  "engines" : {
+    "node" : ">=4.0.0"
+  },
   "devDependencies": {
     "babel": "^5.8.23",
     "chai": "^3.2.0",
