--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "onchange": "^2.0.0",
     "react": "^0.14.0-rc1",
     "react-addons-test-utils": "^0.14.0-rc1",
-    "react-dom": "^0.14.0-rc1"
+    "react-dom": "^0.14.0-rc1",
+    "sinon": "^1.16.1"
   }
 }
